added modal for the beneficiarios button

--- a/FI.WebAtividadeEntrevista/WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/WebAtividadeEntrevista.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BeneficiarioModel.cs" />
     <Compile Include="Models\ClienteModel.cs" />
     <Compile Include="Models\ValidarCPFAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -273,6 +274,7 @@
     <Content Include="Scripts\Clientes\FI.ListClientes.js" />
     <Content Include="Scripts\Clientes\FI.Clientes.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\Clientes\FI.PopupWindow.js" />
     <Content Include="Scripts\Clientes\helpers.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
